examples/errors/uncaught_with_trace.eigs
# ERROR DEMO — an uncaught error prints a stack trace.
# Every frame between the failure and the top level is listed,
# innermost first, with its function name and line.
# expect-error: at middle (line
define inner(items) as:
    return items[99]
define middle(items) as:
    return inner of items
r is middle of ([1, 2])
